# skanestas_test

./: .env.example  .gitignore  Dockerfile  Makefile  Readme.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 2022_04_24_1400_.py  2022_04_24_1405_.py  2022_04_24_1407_.py  2022_04_24_2016_.py  2022_04_26_1930_.py  2022_04_27_1440_.py
backend/app/: main.py
backend/app/dependencies/: database.py  repository.py
backend/app/events/: ticker_events.py
backend/app/models/: __meta__.py  ticker.py
backend/app/routes/: ticker.py
backend/app/schemas/: __meta__.py  search.py  ticker.py
backend/config/: gunicorn.conf.py  settings.py
backend/utils/: logger.py  movement.py
